# one-time-bits

./: .gitignore  Makefile.in  README-it.md  README.md  aclocal.m4  configure  configure.ac
libotb/: Makefile.am  README-it.md  README.md
libotb/po/: POTFILES.in  it.po
libotb/src/: Makefile.am  asym-cipher.c  asym-cipher.h  bitkeeper.c  bitkeeper.h  export.h  friend.c  friend.h  io.c  io.h  libotb.h  local-crypto.c  local-crypto.h  loopable-thread.c  loopable-thread.h  memory.c  memory.h  openssl-util.c  openssl-util.h  pad-db.c  pad-db.h  pad-rec.c  pad-rec.h  protocol.c  protocol.h  random.c  random.h  settings.c  settings.h  sym-cipher.c  sym-cipher.h  unique-id.c  unique-id.h  user.c  user.h
libotb/tests/: Makefile.am  asym-cipher-tests.c  asym-cipher-tests.h  bitkeeper-tests.c  bitkeeper-tests.h  dummy-friend.c  dummy-friend.h  dummy-user.c  dummy-user.h  friend-tests.c  friend-tests.h  leak-tests.c  leak-tests.h  local-crypto-tests.c  local-crypto-tests.h  loopable-thread-tests.c  loopable-thread-tests.h  main.c  main.h  pad-db-tests.c  pad-db-tests.h  pad-rec-tests.c  pad-rec-tests.h  protocol-tests.c  protocol-tests.h  settings-tests.c  settings-tests.h  sym-cipher-tests.c  sym-cipher-tests.h  test-utils.c  test-utils.h  unique-id-tests.c  unique-id-tests.h  user-tests.c  user-tests.h
otb-demo-app/: Makefile.am  README-it.md  README.md  configure.ac
otb-demo-app/data/: Makefile.am  console.ui  create-user.ui  edit-user.ui  entry-invalid.css  passphrase-unlock.ui  working.ui
otb-demo-app/po/: it.po
otb-demo-app/src/: Makefile.am  app.c  app.h  console.c  console.h  create-user-container.c  create-user-container.h  create-user.c  create-user.h  create-user.ui  demo-friend.h  demo-user.c  demo-user.h  dialog.c  dialog.h  edit-user.c  edit-user.h  friend.h  import-export.c  main.c  main.h  otb-demo-app.c  otb-demo-app.h  passphrase-unlock.c  passphrase-unlock.h  user.c  user.h  validation.c  validation.h  working.h
po/: it.po
src/: Makefile.am  Makefile.in  asym-cipher.c  asym-cipher.h  authentication-protocol.c  authentication-protocol.h  bitkeeper.c  bitkeeper.h  cipher.c  cipher.h  client-protocol.c  client-protocol.h  export.h  friend.c  friend.h  insecure-using-dummy-replacements-of-the-original-openssl-functions.c  io.c  io.h  local-crypto.c  local-crypto.h  loopable-thread.c  loopable-thread.h  memory.c  memory.h  openssl-util.c  openssl-util.h  pad-db.c  pad-db.h  pad-rec.c  pad-rec.h  protocol.c  protocol.h  random.c  random.h  rsa.c  rsa.h  settings.c  settings.h  smem.c  smem.h  (+9 more)
tests/: Makefile.am  Makefile.in  asym-cipher-tests.c  asym-cipher-tests.h  authentication-protocol-tests.c  authentication-protocol-tests.h  bitkeeper-tests.c  bitkeeper-tests.h  cipher-tests.c  cipher-tests.h  dummy-friend.c  dummy-friend.h  dummy-user.c  dummy-user.h  friend-tests.c  friend-tests.h  leak-tests.c  local-crypto-tests.c  local-crypto-tests.h  loopable-thread-tests.c  main.c  main.h  pad-db-tests.c  pad-db-tests.h  pad-rec-tests.c  pad-rec-tests.h  protocol-tests.c  protocol-tests.h  rsa-tests.c  rsa-tests.h  settings-tests.c  settings-tests.h  sym-cipher-tests.c  sym-cipher-tests.h  test-utils.c  test-utils.h  unique-id-tests.c  user-tests.c  user-tests.h
